Fix reference to repository.
Signed-off-by: David Calavera <david.calavera@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "VectorMap is a generic wrapper around HashMap<String, Vec<String>
 version = "0.2.0"
 edition = "2018"
 license = "MIT"
-repository = "https://github.com/calavera/query_map"
+repository = "https://github.com/calavera/query-map-rs"
 readme = "./README.md"
 keywords = ["serde", "url"]
 categories = ["web-programming", "parser-implementations", "encoding"]
