--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ readme = "./README.md"
 keywords = ["serde", "url"]
 categories = ["web-programming", "parser-implementations", "encoding"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-form_urlencoded = {version = "^1", optional = true}
-serde_crate = {package = "serde", version = "^1", features = ["rc"], optional = true}
-serde_derive = {version = "^1", optional = true}
+form_urlencoded = { version = "^1", optional = true }
+serde_crate = { package = "serde", version = "^1", optional = true, features = [
+    "rc",
+] }
+serde_derive = { version = "^1", optional = true }
 
 [dev-dependencies]
 serde_json = "^1"
